# carmenda_pseudonymize_core

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  RELEASE_DRAFTER_SETUP.md  WORKFLOW_DOCUMENTATION.md  backend.spec  build.spec  cliff.toml  db.sqlite3  mac-build.spec  manage.py  pyproject.toml  pyspark_deducer copy.py  pyspark_deducer-panda-working.py  requirements.txt  test_run.py
.github/: release-drafter.yml
.github/workflows/: beta-release.yml  prepare-stable.yml  promote-to-stable.yml  release-beta.yml  release-drafter.yml  release-stable.yml  test-develop.yml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_remove_deidentificationjob_caretaker_column_and_more.py
app/: Makefile  core.py  db.sqlite3  init_script.py  logger.py  main.py  manage.py  polars_deduce.py  pyproject.toml  pyspark_deducer.py  requirements-dev.txt  requirements.txt  run.py  spark_session.py
app/api/: __init__.py  apps.py  consumers.py  main.py  manager.py  models.py  routes.py  routing.py  schemas.py  serializers.py  urls.py  utils.py  views.py
app/api/endpoints/: __init__.py  info.py
app/api/migrations/: 0001_initial.py
app/api/services/: __init__.py  job_monitor.py  job_runner.py
app/api/utils/: __init__.py  file_handling.py  logger.py  validators.py
app/api/views/: __init__.py  jobs.py  jobs_views.py  processing.py  root.py  root_views.py  sse_views.py
app/api/websocket/: __init__.py  consumers.py  routing.py
app/config/: __init__.py  apps.py  models.py
app/config/migrations/: 0001_initial.py
app/core/: __init__.py  data_key.py  data_processor.py  datakey.py  deduce.py  deduce_handler.py  deidentify.py  deidentify_handler.py  name_detector.py  processor.py  pseudo_key.py  pseudonymizer.py
app/core/deduce/: __init__.py  deidentify.py  instance.py  name_detector.py
app/core/deduce/lookup_tables/src/: __init__.py
app/core/deduce/lookup_tables/src/institutions/lst_healthcare_institution/: exceptions.txt
app/core/deduce/lookup_tables/src/locations/lst_placename/lst_municipality/: items.txt
app/core/deduce/lookup_tables/src/locations/lst_street/: items.txt
app/core/deduce/lookup_tables/src/names/lst_first_name/: exceptions.txt  items.txt
app/core/deduce/lookup_tables/src/names/lst_interfix/: items.txt
app/core/deduce/lookup_tables/src/whitelist/lst_common_word/: exceptions.txt
app/core/deduce/lookup_tables/src/whitelist/lst_medical_term/: items.txt
app/core/lookup_tables/src/: __init__.py
app/core/lookup_tables/src/locations/lst_placename/lst_region/: items.txt
app/core/lookup_tables/src/locations/lst_placename/lst_residence/: exceptions.txt  items.txt
app/core/lookup_tables/src/locations/lst_street/: exceptions.txt  items.txt  streets_bag.txt
app/core/lookup_tables/src/names/lst_first_name/: exceptions.txt  items.txt
app/core/lookup_tables/src/names/lst_surname/: exceptions.txt  items.txt
app/core/lookup_tables/src/whitelist/lst_common_word/: items.txt
app/core/lookup_tables/src/whitelist/lst_stop_word/: items.txt
app/core/tests/: __init__.py  test_csv_handler.py  test_detection_pipeline.py  test_file_handling.py  test_name_case_insensitive.py  test_surname_detection.py
app/core/utils/: __init__.py  csv_handler.py  file_handling.py  logger.py  progress_control.py  progress_tracker.py  terminal.py
app/deduce/lookup/cache/: __init__.py
app/deduce/lookup/src/names/lst_first_name/: exceptions.txt  items.txt
app/deduce/lookup/src/names/lst_interfix/: items.txt
app/deduce/lookup/src/names/lst_surname/: items.txt
app/deduce/lookup/src/whitelist/lst_common_word/: items.txt
app/frontend-example/: README.md  websocket-test.html
app/frontend-example/components/: WebSocketTest.css  WebSocketTestPage.tsx
app/frontend-example/hooks/: useJobProgress.ts
app/locale/nl/LC_MESSAGES/: django.mo  django.po
app/lookup_tables/src/locations/lst_placename/lst_region/: items.txt
app/lookup_tables/src/locations/lst_placename/lst_residence/: exceptions.txt  items.txt
app/lookup_tables/src/names/lst_surname/: exceptions.txt  items.txt
app/lookup_tables/src/whitelist/lst_common_word/: items.txt
app/main/: __init__.py  _version.py  asgi.py  config.py  middleware.py  settings.py  settings_log.py  storage.py  urls.py  version.py  wsgi.py
app/pseudonymize/core/: data_processor.py  deidentify_handler.py
app/pseudonymize/tests/: __init__.py
app/services/: __init__.py  logger.py  progress_tracker.py
app/settings/: __init__.py  apps.py  models.py
app/settings/migrations/: 0001_initial.py
app/tests/: __init__.py  test_app_main.py  test_data_processor.py  test_detection_pipeline.py  test_main.py  test_name_case_insensitive.py  test_name_detection.py  test_surname_detection.py
app/utils/: __init__.py  file_handling.py  logger.py  progress_tracker.py  terminal.py
bruno/: bruno.json  collection.bru
bruno/environments/: local.bru
bruno/init/: folder.bru  root.bru  version.bru
code/: manage.py  requirements.txt  setup.cfg
code/api/: manager.py  serializers.py  views.py
code/main/: middleware.py  settings.py  urls.py
code/services/: logger.py  polars_deduce.py  progress_tracker.py
data/input/: reordered_sampled_data.csv  sampled_data.csv  sampled_data.parquet
deduce_service/: deduce_manager.py  spark_session.py
deployment/: .dockerignore  Dockerfile  Dockerfile-core  docker-entrypoint.sh
main/: settings.py  urls.py
main/settings/: dev.py  prod.py
pyspark_deducer/: .gitignore  Dockerfile  linux_deduce_setup.sh
pyspark_deducer/app/: dummy_data_maker.py  pyspark_deducer.py
services/: deduce_manager.py  deducer.py  logger.py  manager.py  pyspark_deducer.py  spark_session.py  wrapper.py
source/: main.py  requirements.txt
source/core/: data_processor.py  deduce_handler.py
(+229 files in other folders)
