[project]
name = "Carmenda Privacytool - Backend API"
dynamic = ["version"]

[tool.setuptools_scm]
root = ".."
version_file = "api/_version.py"

[tool.ruff]
line-length = 120
exclude = ['migrations']

[tool.ruff.lint]
select = ['ALL']
ignore = [
    'ARG002', # (`request` & `pk` are mandatory for DRF)
    'D106',   # (Meta classes don't need a docstring)
    'DTZ005', # (Timezones are managed by django)
    'SLF001', # (MEIPASS use for PyInstaller)
    'S101',   # (False positives when using with pytest)
    'S301',   # (pickle file loading)
    'EXE001', # (Shebang in manage.py is OK without executable bit in Git)
    'COM812', # (May cause conflicts when used with the formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.format]
quote-style = 'single'

[tool.mypy]
plugins = [
    'mypy_django_plugin.main',
    'mypy_drf_plugin.main',
]

[[tool.mypy.overrides]]
module = 'environ'
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = 'main.settings'

[tool.coverage.run]
data_file = 'pytest/.coverage'

[tool.coverage.html]
directory = 'pytest/html'

[tool.coverage.xml]
output = 'pytest/coverage.xml'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = 'main.settings'
python_files = ['tests.py', 'test_*.py', '*_tests.py']
cache_dir = 'pytest/.pytest_cache'
addopts = [
    '--cov=.',
    '--cov-report=term:skip-covered',
    '--cov-report=html',
    '--cov-report=xml',
    '--cov-fail-under=25',
    '-p',
    'no:warnings'
]